win32: fix API calls expecting a void** to fill a interface pointer

In some cases we cast the interface** to a void** which is wrong (see this thread !558 (comment 279673))

We should use an interim void* that will receive the pointer to use, which can then be set on the real interface* variable.

Like

void* vAudioVolume = NULL;
hr = IAudioClient_GetService(sys->client, &IID_ISimpleAudioVolume, &vAudioVolume);
ISimpleAudioVolume* pc_AudioVolume = vAudioVolume;